# NetDiscoverIT

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/n8n/: build-monitor.json  pr-monitor.json
.github/workflows/: cd.yml  ci.yml
configs/: agent.yaml
deploy/gcp/: agent.Dockerfile  api.Dockerfile  cloud-run-agent.yaml  cloud-run-api.yaml  cloudbuild.yaml  env.template.yaml  frontend.Dockerfile  nginx.conf
docker/agent/: Dockerfile  docker-compose.yml  requirements.txt
docker/api/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docs/: TODO.md
docs/agent/: architecture.md  javascript-style.md  phase-2.md  python-style.md  testing.md
docs/guides/: gcp-deployment-guide.md
docs/phase1-diagrams/: README.md  architecture.mmd  data-flow.mmd  design.mmd
docs/phase1-documentation/: README.md  agent-service.md  api-reference.md  architecture.md  configuration.md  deployment.md  overview.md  security-privacy.md  testing.md
docs/plans/: 2026-03-03-sanitizer-design.md  2026-03-03-sanitizer-implementation.md  2026-03-21-api-auth-schema-design.md  2026-03-21-api-auth-schema-implementation.md  2026-03-21-local-agent.md  2026-03-21-sanitizer-normalizer.md  2026-03-22-alerting-design.md  2026-03-22-audit-log-writer-design.md  2026-03-22-audit-log-writer-implementation.md  2026-03-22-change-management-design.md  2026-03-22-change-management-implementation.md  2026-03-22-group1-implementation.md  2026-03-23-acl-compliance-vault-design.md  2026-03-26-group7-nli-rag-design.md  (+20 more)
tests/: conftest.py
(+241 files in other folders)
